// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#routes Sets a default permalink function when undefined. 1`] = `
Object {
  "content": Object {
    "all": Array [
      Object {
        "slug": "content",
      },
    ],
    "data": Object {
      "foo": "bar",
    },
    "layout": "Layout",
    "layoutComponent": "<div class=\\"svelteComponent\\">Layout</div>",
    "permalink": [Function],
    "template": "Default",
    "templateComponent": "<div class=\\"svelteComponent\\">Default</div>",
  },
  "home": Object {
    "all": [Function],
    "data": [Function],
    "layout": "Layout.svelte",
    "layoutComponent": "<div class=\\"svelteComponent\\">Layout.svelte</div>",
    "permalink": [Function],
    "template": "Home.svelte",
    "templateComponent": "<div class=\\"svelteComponent\\">test/src/routes/home/Home.svelte</div>",
  },
}
`;

exports[`#routes Sets a single request object for all array when when no all function 1`] = `
Object {
  "SomethingCamel": Object {
    "all": Array [
      Object {
        "slug": "something-camel",
      },
    ],
    "data": [Function],
    "layout": "Layout.svelte",
    "layoutComponent": "<div class=\\"svelteComponent\\">Layout.svelte</div>",
    "permalink": [Function],
    "template": "SomethingCamel.svelte",
    "templateComponent": "<div class=\\"svelteComponent\\">test/src/routes/SomethingCamel/SomethingCamel.svelte</div>",
  },
  "content": Object {
    "all": Array [
      Object {
        "slug": "content",
      },
    ],
    "data": Object {
      "foo": "bar",
    },
    "layout": "Layout",
    "layoutComponent": "<div class=\\"svelteComponent\\">Layout</div>",
    "permalink": [Function],
    "template": "Default",
    "templateComponent": "<div class=\\"svelteComponent\\">Default</div>",
  },
  "home": Object {
    "all": Array [
      Object {
        "slug": "/",
      },
    ],
    "data": [Function],
    "layout": "Layout.svelte",
    "layoutComponent": "<div class=\\"svelteComponent\\">Layout.svelte</div>",
    "permalink": [Function],
    "template": "Home.svelte",
    "templateComponent": "<div class=\\"svelteComponent\\">test/src/routes/home/Home.svelte</div>",
  },
}
`;

exports[`#routes no template, ts imports 1`] = `
Object {
  "content": Object {
    "all": [Function],
    "data": Object {
      "foo": "bar",
    },
    "layout": "Layout",
    "layoutComponent": "<div class=\\"svelteComponent\\">Layout</div>",
    "permalink": [Function],
    "template": "Content.svelte",
    "templateComponent": "<div class=\\"svelteComponent\\">Content</div>",
  },
  "home": Object {
    "all": [Function],
    "data": [Function],
    "layout": "Layout.svelte",
    "layoutComponent": "<div class=\\"svelteComponent\\">Layout.svelte</div>",
    "permalink": [Function],
    "template": "Home.svelte",
    "templateComponent": "<div class=\\"svelteComponent\\">test/src/routes/home/Home.svelte</div>",
  },
}
`;

exports[`#routes works where things are set 1`] = `
Object {
  "content": Object {
    "all": [Function],
    "data": Object {
      "foo": "bar",
    },
    "layout": "Layout",
    "layoutComponent": "<div class=\\"svelteComponent\\">Layout</div>",
    "permalink": [Function],
    "template": "Default",
    "templateComponent": "<div class=\\"svelteComponent\\">Default</div>",
  },
  "home": Object {
    "all": [Function],
    "data": [Function],
    "layout": "Layout.svelte",
    "layoutComponent": "<div class=\\"svelteComponent\\">Layout.svelte</div>",
    "permalink": [Function],
    "template": "Home.svelte",
    "templateComponent": "<div class=\\"svelteComponent\\">test/src/routes/home/Home.svelte</div>",
  },
}
`;
